2004-01-26  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Post release version update.

2004-01-26  Theodore A. Roth  <troth@openavr.org>

	* AVRDUDE 4.3.0 has been released (cvs release tag is "release_4_3_0").

2004-01-26  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Update copyright year.
	(AC_INIT): Set version to 4.3.0.

2004-01-25  Theodore A. Roth  <troth@openavr.org>

	* ChangeLog: Minor formatting cleanups.
	Move to all 2003 entries to ChangeLog-2003.
	* ChangeLog-2003: New file.
	* Makefile.am: Update copyright year.
	(EXTRA_DIST): Add ChangeLog-2003.

2004-01-17  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* doc/avrdude.texi: Get rid of those black boxes marking "overfull
	hbox".

2004-01-17  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* doc/avrdude.texi: New appendix "Troubleshooting".

2004-01-12  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* avr910.c, avrpart.c, avrpart.h, doc/TODO:
	Look up devicecode and report device.

2004-01-03  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* avr910.c, pgm.c, pgm.h, config_gram.y, lexer.l: Add new configuration
	parameter baudrate to support avr910-programmers with non-standard
	baudrates.
	* avrdude.conf.in, doc/avrdude.texi: Added "baudrate" to documentation.

2004-01-03  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* avr910.c: Removed debugging stuff that is no longer needed.

2004-01-03  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* doc/TODO: Removed two items.

2004-01-03  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* main.c, avr.c, avr.h, par.c, stk500.c: Add function
	avr_chip_erase() to unify handling of cycle-count.
	Makes cycle-count work for avr910-programmers.
